# capstone

./: .gitignore  0002_fill_db.py  capstone.code-workspace  conftest.py  fill_db.py  manage.py  mypy.ini  oauth_code.py  purgeCSS.js  pyproject.toml  pytest.ini  reset_db.sh  sample.jsonc  schema.yml  teste.py  teste.sh
capstone/: settings.py  urls.py
db_json/: db.json  update.mjs
solution/: admin.py  api.py  api_views.py  forms.py  models.py  parsers.py  urls.py  utils.py  validators.py  views.py
solution/api/: api_views.py  exception.py  parsers.py  permissions.py  renderers.py  serializers.py  urls.py
solution/frontend/: .eslintrc.json  .prettierrc.json  package.json  pnpm-lock.yaml  postcss.config.json  teste.js  teste.tsx  tsconfig.json  vite.config.ts
solution/frontend/src/: bootstrap.ts  django.ts  index.d.ts  main.tsx  store.ts
solution/frontend/src/assets/: images.ts
solution/frontend/src/components/: ErrorPage.tsx  Footer.tsx  ImageInput.tsx  InputBoolTags.tsx  InputFilterTextTags.tsx  InputRatingTags.tsx  InputTextTags.tsx  NavBar.tsx  SearchFilterButton.tsx  StyledSelect.tsx
solution/frontend/src/dev/: palette.tsx  previews.tsx
solution/frontend/src/hooks/: useDebounce.tsx  useSkipEffect.tsx  useStateReducer.ts  useToggle.ts  useZodForm.ts
solution/frontend/src/icons/: BriefcaseIcon.tsx  ClockFillIcon.tsx  ClockIcon.tsx  CloseIcon.tsx  CurrencyIcon.tsx  ExternalLinkIcon.tsx  IdentificationIcon.tsx  InfoFillIcon.tsx  JobsCheckIcon.tsx  MapPinIcon.tsx  RoleIcon.tsx  SearchIcon.tsx  StarFilledIcon.tsx  StarOutlineIcon.tsx
solution/frontend/src/queries/: findJobsQuery.ts  rolesQuery.ts  workerQuery.ts
solution/frontend/src/routes/: Enterprise.tsx  Home.tsx  Root.tsx  UserAccount.tsx  WorkerPage.tsx  home.tsx  job-description.tsx  root.tsx  user.tsx  worker.tsx
solution/frontend/src/routes/find-jobs/: CardTags.tsx  FindJobs.tsx  JobFavorites.tsx  JobFeed.tsx  JobFilterModal.tsx  JobHighlightCard.tsx  JobMiniCard.tsx  JobSearch.tsx  SelectedJobCard.tsx  find-jobs.tsx
solution/frontend/src/routes/find-jobs/feed/: JobFeed.tsx  JobFilterModal.tsx  JobMiniCard.tsx  JobSearch.tsx  SelectedJobCard.tsx
solution/frontend/src/routes/find-workers/: FilteredWorkerCards.tsx  FindWorkers.tsx  WorkerCard.tsx  WorkerFilterModal.tsx  WorkerSearch.tsx  find-workers.tsx
solution/frontend/src/routes/setup-account/: AccountType.tsx  BsHorizontalInput.tsx  SetupAccount.tsx  personal.tsx  setup-account.tsx
solution/frontend/src/routes/setup-account/business/: BusinessForm.tsx  business-rep.tsx  business.tsx
solution/frontend/src/routes/setup-account/business-rep/: BusinessRepForm.tsx
solution/frontend/src/routes/setup-account/personal/: Personal.tsx  PersonalForm.tsx
solution/frontend/src/routes/user-acc/: AccountInfo.tsx  UserAccount.tsx
solution/frontend/src/routesCodeSplit/: FindWorkers.tsx  SearchWorkers.tsx  WorkerPage.tsx
solution/frontend/src/styles/: main.css  main.css.map
solution/frontend/src/utils/: createZodUnionSchema.ts  jsonToFormData.ts  utils.ts
solution/frontend/static-data/: companySizes.json  db.json
solution/migrations/: 0001_initial.py  0002_auto_20230618_1642.py  0002_fill_db.py  0002_rename_enterprise_img_businessaccount_enterprise_logo_and_more.py  0003_rename_personal_photo_personalaccount_photo.py
solution/scss/: _bootstrap.scss  _colors.scss  _date-picker.scss  _find-jobs.scss  _find-workers.scss  _homepage.scss  _icons.scss  _image-input.scss  _loginpage.scss  _mixins.scss  _navbar.scss  _search-modal.scss  _search_form.scss  _setup-account.scss  _success-toast.scss  _worker-card.scss  _worker-page.scss  main.scss
solution/templates/rest_framework/: api.html
solution/templates/solution/: index.html  layout.html  login.html  register.html  swagger-ui.html
solution/tests/: test_api.py  test_api_account_management.py  test_api_employer_account.py  test_api_job.py  test_api_user_account.py  test_api_worker_account.py  test_job_model.py  test_models.py
